b=809601 correct drag and drop event coords when over child windows r=karlt